--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -1,9 +1,10 @@
 <section class="timeline-event">
 	<div class="card timeline-content">
 		<div class="card-content">
-			<span class="card-title">{{EVENT_NAME}}</span>
+			<span class="card-title">{{NAME}}</span>
 
 			<ul class="collection">
+				<li class="collection-item">Time <span class="secondary-content">{{TIME}}</span></li>
 				{{DATA}}
 			</ul>
 		</div>
