--- a/src/scanner/main.css
+++ b/src/scanner/main.css
@@ -1,7 +1,12 @@
 html,
 body,
 .valign-wrapper {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
 	height: 100%;
+	background-color: white;
 }
 
 canvas {
@@ -9,10 +14,16 @@ canvas {
 }
 
 #video-wrapper {
-	position: relative;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	overflow: hidden;
 }
 
 #output {
+	display: none !important;
 	position: absolute;
 	bottom: 0;
 	left: 0;
