Unslug event titles

--- a/src/templates/wrapper.html
+++ b/src/templates/wrapper.html
@@ -136,6 +136,14 @@
 		</div>
 	</div>
 
+	<script>
+		var unslugElements = document.querySelectorAll('.unslug');
+
+		for (var i = 0, l = unslugElements.length; i < l; i++) {
+			unslugElements[i].innerText = unslugElements[i].innerText.replace(/-/g, ' ');
+		}
+	</script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
