--- a/src/templates/event.html
+++ b/src/templates/event.html
@@ -1,7 +1,7 @@
 <section class="timeline-event">
 	<div class="card timeline-content">
 		<div class="card-content">
-			<span class="card-title">{{NAME}}</span>
+			<span class="card-title unslug">{{NAME}}</span>
 
 			<ul class="collection">
 				<li class="collection-item">time <span class="secondary-content">{{TIME}}</span></li>
